--- a/splash/src/Translations/en_US/main.ini
+++ b/splash/src/Translations/en_US/main.ini
@@ -24,11 +24,11 @@ ErrSelfTestNoStock  =   Local SelfTest - Default assigned WareHouse is Missing
 
 
 
-MsgReadDfLang       =   Lecture de la langue par défaut (%s)
-MsgSetupDfLang      =   Langue
-MsgSetupDfLangDesc  =   Langue par défaut utilisée par le module
-MsgSetupUser        =   Utilisateur
-MsgSetupUserDesc    =   Utilisateur utilisée par le module lors des opération réalisée à distance
-MsgSetupStock       =   Entrepot
-MsgSetupStockDesc   =   Entrepot par défaut utilisée par le module (si non spécifié)
+MsgReadDfLang       =   Default language (%s)
+MsgSetupDfLang      =   Language
+MsgSetupDfLangDesc  =   Default language used by the module
+MsgSetupUser        =   User
+MsgSetupUserDesc    =   Default user used by the module during remote operations
+MsgSetupStock       =   Warehouse
+MsgSetupStockDesc   =   Default Warehouse used by the module (if not already specified)
 
