--- a/splash/src/Translations/es_ES/objects.ini
+++ b/splash/src/Translations/es_ES/objects.ini
@@ -18,23 +18,23 @@
 ; ==============================================================================
 ; Customers Objects Translations 
 ; ==============================================================================
-CustomerRef_Desc        =   Customer Internal reference
-CustomerFirstname_Desc  =   Surname Nom de famille du client. It can be empty if the customer is a business.
-CustomerLastname_Desc   =   Client name. It can be empty if the customer is a business.
-CustomerMainAddress     =   Customer main address
-CustomerAddressList     =   List of client addresses
+CustomerRef_Desc        =   Referencia interna del cliente
+CustomerFirstname_Desc  =   Apellido del cliente. Puede estar vacío si el cliente es un negocio.
+CustomerLastname_Desc   =   Nombre del cliente Puede estar vacío si el cliente es un negocio.
+CustomerMainAddress     =   Dirección principal del cliente
+CustomerAddressList     =   Lista de direcciones del cliente
 
 
 
 ; ==============================================================================
 ; Products Objects Translations 
 ; ==============================================================================
-ProductRef_Desc         =   Internal reference of the product.
-ProductStock_Desc       =   Total quantity of products in stock.
-ProductStockAlert_Desc  =   Quantity of products in stock from the generated stock alert.
-ProductDesiredStock_Desc=   Desired level of product stuck.
-ProductMainPrice_Desc   =   Base price of the product.
-ProductLabelIsRo        =   You have enabled Variant Module, Full Product Label is Now Read Only. Please refresh your Splash Server.
-ProductIsVariantBase    =   Luke, I am your father... This Product is a Variant base, so you cannot access it directly.
+ProductRef_Desc         =   Referencia interna del producto.
+ProductStock_Desc       =   Cantidad total de productos stock.
+ProductStockAlert_Desc  =   Cantidad de productos en stock desde la que se generó la alerta de stock.
+ProductDesiredStock_Desc=   Nivel de stock deseado para este producto.
+ProductMainPrice_Desc   =   Precio base de este producto.
+ProductLabelIsRo        =   Ha habilitado el Módulo Variante, la etiqueta completa del producto ahora es de solo lectura. Actualiza tu servidor Splash.
+ProductIsVariantBase    =   Luke, yo soy tu padre... Este producto es de base variante, por lo que no puedes accederlo directamente.
 
 ;MsgHistUpdateName   =   %s lignes de l'historique du serveur mis à jour.
